Fabric compilation & Common mixin fixes